<resources>
    <string name="app_name">Cars DB</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="car_year">Date of manufacture</string>
    <string name="car_mileage">Mileage, km</string>
    <string name="car_color">Color</string>
    <string name="car_price">Price, BYN</string>
    <string name="car_trans">Transmission type</string>
    <string name="car_body">Body type</string>
    <string name="car_eng_type">Engine type</string>
    <string name="car_eng_disp">Engine displacement, cm3</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="apply_btn">SAVE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="edit_btn">EDIT</string>
    <string name="add_entry">Add new entry</string>

    <string-array name="eng_types">
        <item>Gasoline</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="car_makes">
        <item>Abarth</item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroën</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Dodge</item>
        <item>Donkervoort</item>
        <item>DS</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Fisker</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Iveco</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>KTM</item>
        <item>Lada</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>Lexus</item>
        <item>Lotus</item>
        <item>Maserati</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>MG</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Morgan</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Rolls-Royce</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>
</resources>
